--- a/common/app/assets/stylesheets/layout/_grid.scss
+++ b/common/app/assets/stylesheets/layout/_grid.scss
@@ -64,7 +64,8 @@ $from: $gridWidth * $gridColMin * 2;
     }
 }
 
-@for $i from ($gridColMin * 2) through $gridCols {
+//@for $i from ($gridColMin * 2) through $gridCols {
+@for $i from 1 through $gridCols {
     $from : $gridWidth * $i;
     $to : $gridWidth * ($i+1);
     // last media-query needs upper bound of 'infinity':
@@ -97,36 +98,5 @@ $from: $gridWidth * $gridColMin * 2;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
         height: (36px * $i) + (12px * ($i - 1));
-    }
-}
-
-.grid-article {
-    max-width: $gridWidth * 7;
-}
-
-.grid-article .main-image-wrap {
-    float: right;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 0 0 ($baseTopPad + $baseBotPad) ($baseLeftPad + $baseRightPad - 1);
-    background-color: #fff;
-}
-
-.grid-article .main-image {
-    width: 100%;
-}
-
-@for $i from 7 through 9 {
-    $from : $gridWidth * $i;
-    $step : $i - 7;
-    $incrWidth  : floor($step / 2);
-    $incrMargin : ceil($step / 2);
-
-    // last media-query needs upper bound of 'infinity':
-    @media only screen and (min-width : $from) {
-        .grid-article .main-image-wrap {
-            width: $gridWidth * (4 + $incrWidth);
-            margin-right: -1 * $gridWidth * $step;
-        }
     }
 }
