--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -95,6 +95,7 @@ $gridWidth: 5em;
 
 .grid-article {
     max-width: $gridWidth * 7;
+    @extend .cf;
 }
 
 .grid-article .main-image {
@@ -108,7 +109,7 @@ $gridWidth: 5em;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
         background-color: #fff;
-        padding: 0 0 0 11px;
+        padding: 0 0 0 13px;
     }
 
     .grid-article .main-image-wrap {
@@ -132,27 +133,56 @@ $gridWidth: 5em;
 
 /* 9 cols */
 @media screen and (min-width: 45em) {
-    .grid-article .main-image-wrap {
-        width: $gridWidth * 5;
-        margin-right: $gridWidth * -2;
-    }
+  .grid-article {
+      max-width: 100%;
+  }
+  .article__head {
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      width: $gridWidth * 4;
+      float: left;
+  }
+  .grid-article .main-image-wrap,
+  .grid-article .article__byline,
+  .grid-article .article__body {
+      width: $gridWidth * 5;
+      margin-right: 0;
+      float: right;
+      padding: 0 0 0 0;
+      margin: 0 0 0 0;
+  }
+  .byline {
+    margin-left: 0;
+  }
 }
 
 /* 10 cols */
 @media screen and (min-width: 50em) {
-    .grid-article .main-image-wrap {
-        width: $gridWidth * 6;
-        margin-right: $gridWidth * -3;
-    }
+  .grid-article .main-image-wrap,
+  .grid-article .article__byline,
+  .grid-article .article__body {
+      width: $gridWidth * 6;
+  }
 }
 
 /* 11 cols */
 @media screen and (min-width: 55em) {
-  .grid-article {
-      margin-left: $gridWidth * 1;
+  .grid-article .main-image-wrap {
+      width: $gridWidth * 7;
+  }
+  .grid-article .article__byline,
+  .grid-article .article__body {
+      margin-right: $gridWidth * 1;
   }
 }
 
 /* 12 cols */
 @media screen and (min-width: 60em) {
+  .grid-article .main-image-wrap {
+      width: $gridWidth * 8;
+  }
+  .grid-article .article__byline,
+  .grid-article .article__body {
+      margin-right: $gridWidth * 2;
+  }
 }
