--- a/common/app/assets/stylesheets/module/football/_matches.scss
+++ b/common/app/assets/stylesheets/module/football/_matches.scss
@@ -2,17 +2,19 @@
 
 .competitions-date,
 .football-table-header {
+    @extend %type-6;
+    border-top: 1px solid $neutral5;
     padding-top: $baseline*2;
-    background-color: #efefe7;
+    color: $neutral2;
 }
 
-.competitions-date {
+/*.competitions-date {
     background-color: $sportMid;
     color: #ffffff;
     margin-top: $baseline*2;
     margin-bottom: $baseline;
     padding: 9px $baseline*2;
-}
+}*/
 
 .team-fixtures .competitions-date,
 .team-results .competitions-date {
@@ -30,17 +32,14 @@
 }
 
 .competition-title {
+    @extend %type-6;
+    font-weight: 500;
     margin-bottom: 0;
     padding: 9px $baseline*2;
     position: relative;
-    color: #064951;
+
     background: #f4f4ee;
     border-bottom: 1px solid #DEDEDD;
-}
-
-a.competition-title {
-    color: $sportBright;
-    font-weight: 500;
 }
 
 .competition-title i,
@@ -261,36 +260,6 @@ a.competition-title {
     border-color: #a1c391;
 }
 
-// football-filters is the dropdown list
-
-.football-filters {
-    margin-bottom: $baseline*2;
-}
-
-.football-filters > li {
-    background: $sportMid;
-    padding: 0 12px;
-}
-
-.football-filters h2 {
-    font-weight: 500;
-    font-family: helvetica, arial, sans-serif;
-    font-size: 14px;
-    color: #FFFFFF;
-    border-bottom: 1px solid #a1c391;
-    padding-bottom: $baseline;
-    margin-top: 10px;
-}
-
-.football-filters li:first-child h2 {
-    margin-top: 30px;
-}
-
-.football-filters .sections li a {
-    color: #ffffff;
-    border-top-color: #a1c391;
-    line-height: 21px;
-}
 
 .team-list li span {
     padding: $baseline*2 0;
@@ -298,51 +267,6 @@ a.competition-title {
     display: block;
     height: auto;
     color: #999;
-}
-
-.nav--columns.nav--top-border-off > li:nth-child(-n+2) span,
-.nav--stacked.nav--top-border-off > li:nth-child(1) span {
-    border-top: none;
-    padding-top: 0;
-}
-
-.football-filters .cta {
-    background: $sportDark;
-    color: #ffffff;
-    margin-bottom: $baseline*2;
-    margin-top: $gutter;
-    padding: 15px 0;
-}
-
-.football-filters .cta:link,
-.football-filters .cta:visited {
-    color: #ffffff;
-}
-
-// football-filter is the dropdown link item
-
-.football-filter {
-    background: $sportBright;
-    margin: 0 $gutter $baseline*2 $gutter;
-    color: #ffffff; 
-    border-bottom: none;
-}
-
-.football-filter > a {
-    color: #ffffff;
-}
-
-.football-filter > span {
-    display: block;
-}
-
-.football-filter-arrow {
-    background: $sportMid;
-    height: 100%;
-    width: 48px;
-    position: absolute;
-    right: 0;
-    top: 0;
 }
 
 .football-table-container {
