--- a/common/app/assets/stylesheets/module/nav/_nav.scss
+++ b/common/app/assets/stylesheets/module/nav/_nav.scss
@@ -48,7 +48,7 @@
   }
 
     .nav--columns-football {
-      padding: $baseline*2 0 $baseline 0
+      padding: 0;
     }
 
     .nav--columns .nav__item {
