--- a/common/app/assets/stylesheets/football.scss
+++ b/common/app/assets/stylesheets/football.scss
@@ -6,6 +6,7 @@
 @import "_extends-only";
 
 @import "module/football/_filters";
+@import "module/football/_team-list";
 @import "module/football/_stats";
 @import "module/football/_tables";
 @import "module/football/_matches";
