--- a/football/app/views/fragments/frontMatchBlock.scala.html
+++ b/football/app/views/fragments/frontMatchBlock.scala.html
@@ -4,7 +4,7 @@
 
     <h3 class="type-5">Today's matches</h3>
     <a href="@competition.url" class="competition-title football-table-link box-indent type-5" data-link-name="all todays matches">
-       @competition.fullName <i class="i i-sport-arrow"></i>
+       @competition.fullName
     </a>
 
     <ol class="matches unstyled">
@@ -20,10 +20,10 @@
 
 @if(isCompetitionPage) {
 <a href="@competition.url/fixtures" class="cta-small cta-small-border type-8" data-link-name="View all competition fixtures">
-    View all @competition.fullName fixtures <i class="i i-sport-arrow-small"></i>
+    View all @competition.fullName fixtures
 </a>
 } else {
 <a href="/football/live" class="cta-small cta-small-border type-8" data-link-name="View all matches">
-    View all today's matches <i class="i i-sport-arrow-small"></i>
+    View all today's matches
 </a>
 }
