--- a/football/app/views/fragments/tablesBody.scala.html
+++ b/football/app/views/fragments/tablesBody.scala.html
@@ -24,7 +24,6 @@
 
         <a class="competition-title football-table-header football-table-link type-7" href="@table.competition.url" data-link-name="competition">
             @table.competition.fullName
-            <i class="i i-sport-arrow"></i>
         </a>
 
         <table class="table-football">
@@ -54,7 +53,7 @@
         </table>
 
         @if(!model.singleCompetition) {
-            <a href='@{table.competition.url + "/table"}' data-link-name='full table' class="cta-small type-8">View full @table.competition.fullName table <i class="i i-sport-arrow-small"></i></a>
+            <a href='@{table.competition.url + "/table"}' data-link-name='full table' class="cta-small type-8">View full @table.competition.fullName table</a>
         }
 
     </li>
