--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -161,7 +161,7 @@ video {
   video {
     width: $gridWidth * 5;
     float: right;
-    padding: 0 10px 0 0;
+    padding: 0 10px;
     margin: 15px 0 0 0;
   }
   .byline {
