--- a/event/app/views/fragments/storyBody.scala.html
+++ b/event/app/views/fragments/storyBody.scala.html
@@ -31,6 +31,7 @@
                     @fragments.pictures(story)
                     @fragments.places(story)
                     @fragments.timeline(story)
+                    @fragments.social(page)
                     @fragments.feedback()
                 
                 </div>
