--- a/common/app/assets/stylesheets/module/experiments/_story.scss
+++ b/common/app/assets/stylesheets/module/experiments/_story.scss
@@ -529,6 +529,8 @@ i.is-open.cta-new__icn--right {
 	padding:5px;
 	color:#ffffff;
 	font-weight:500;
+	display:block;
+	text-decoration:none;
 }
 .cta-new--story {
 	border-top:1px solid #ffffff;
