--- a/common/app/assets/stylesheets/football.scss
+++ b/common/app/assets/stylesheets/football.scss
@@ -5,6 +5,7 @@
 @import "_mixins";
 @import "_extends-only";
 
+@import "module/_cta";
 @import "module/football/_filters";
 @import "module/football/_team-list";
 @import "module/football/_stats";
