--- a/football/app/views/fragments/tablesBody.scala.html
+++ b/football/app/views/fragments/tablesBody.scala.html
@@ -14,7 +14,7 @@
 
 @fragments.filters(model.filters, model.page, "tables")
 
-<ol class="competitions football-table-container unstyled box-indent" data-link-name="tables" role="main">
+<ol class="competitions football-table-container" data-link-name="tables" role="main">
 
 
     @model.tables.map{ table =>
